Finished biggest bust/steal

--- a/ken.ipynb
+++ b/ken.ipynb
@@ -2,17 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from yfpy.query import YahooFantasySportsQuery\n",
-    "from datetime import datetime, timedelta"
+    "from datetime import datetime, timedelta\n",
+    "from dotenv import load_dotenv\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv()\n",
+    "CLIENT_ID = os.getenv(\"CLIENT_ID\")\n",
+    "CLIENT_SECRET = os.getenv(\"CLIENT_SECRET\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,20 +37,18 @@
     "    league_id=league_id,\n",
     "    game_code=\"nhl\",\n",
     "    game_id=game_id,\n",
-    "    yahoo_consumer_key=\"\",\n",
-    "    yahoo_consumer_secret=\"\",\n",
+    "    yahoo_consumer_key=CLIENT_ID,\n",
+    "    yahoo_consumer_secret=CLIENT_SECRET,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "league_info = query.get_league_info()\n",
-    "start_date_str = league_info.start_date\n",
-    "end_date_str = league_info.end_date\n",
     "start_week = league_info.start_week\n",
     "end_week = league_info.end_week"
    ]
@@ -50,16 +61,99 @@
    "source": [
     "def get_team_stats_by_date(team_id, date):\n",
     "    team_key = f\"{league_info.league_key}.t.{team_id}\"\n",
-    "    return query.query(f\"https://fantasysports.yahooapis.com/fantasy/v2/team/{team_key}/stats;type=date;date={date}\", [\"team\", [\"team_points\", \"team_projected_points\"]])"
+    "    return query.query(\n",
+    "        f\"https://fantasysports.yahooapis.com/fantasy/v2/team/{team_key}/stats;type=date;date={date}\", \n",
+    "        [\"team\", [\"team_points\", \"team_projected_points\"]]\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_team_stats_by_date(1, \"2023-10-10\") "
+    "def get_players(player_keys):\n",
+    "    return [\n",
+    "        player \n",
+    "        for i in range(round(len(player_keys) / 25) + 1)\n",
+    "        for player in query.query(\n",
+    "            f\"https://fantasysports.yahooapis.com/fantasy/v2/league/{league_info.league_key}/players;player_keys={','.join(player_keys[i*25:min((i+1)*25, len(player_keys))])};start={i*25}/stats\",\n",
+    "            [\"league\", \"players\"]\n",
+    "        )\n",
+    "    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_top_n_players_by_position(n, position):\n",
+    "    if position == \"F\":\n",
+    "        position = \"C,LW,RW\"\n",
+    "    return [playere for i in range(round(n/25)+1) for player in query.query(\n",
+    "        f\"https://fantasysports.yahooapis.com/fantasy/v2/league/{league_info.league_key}/players;sort=PTS;sort_type=season;position={position};count={n};start={i*25}/stats\",\n",
+    "        [\"league\", \"players\"]\n",
+    "    )]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Biggest draft busts\n",
+      "J.T. Miller - 97.6\n",
+      "Evan Bouchard - 76.6\n",
+      "Nathan MacKinnon - 76.3\n",
+      "Noah Dobson - 73.2\n",
+      "Thatcher Demko - 62.0\n",
+      "Biggest draft steals\n",
+      "Dougie Hamilton - -293.2\n",
+      "Tyson Barrie - -225.8\n",
+      "Mikhail Sergachev - -213.2\n",
+      "Jack Hughes - -146.6\n",
+      "Devon Levi - -144.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Biggest draft busts/steals\n",
+    "'''\n",
+    "# Get draft results\n",
+    "draft_results = query.get_league_draft_results()\n",
+    "draft_players = get_players([draft_result.player_key for draft_result in draft_results])\n",
+    "draft_players_by_pos = {\"F\": [], \"D\": [], \"G\": []}\n",
+    "positions_map = {\"C\": \"F\", \"LW\": \"F\", \"RW\": \"F\", \"D\": \"D\", \"G\": \"G\"}\n",
+    "for draft_player in draft_players:\n",
+    "    draft_players_by_pos[positions_map[draft_player.primary_position]].append(draft_player)\n",
+    "# Get the top players by position\n",
+    "top_players_by_pos = {\n",
+    "    \"F\": get_top_n_players_by_position(len(draft_players_by_pos[\"F\"]), \"F\"), \n",
+    "    \"D\": get_top_n_players_by_position(len(draft_players_by_pos[\"D\"]), \"D\"), \n",
+    "    \"G\": get_top_n_players_by_position(len(draft_players_by_pos[\"G\"]), \"G\")\n",
+    "}\n",
+    "# Get differences between draft player and top player\n",
+    "diffs = []\n",
+    "for key in draft_players_by_pos:\n",
+    "    for draft_player, top_player in zip(draft_players_by_pos[key], top_players_by_pos[key]):\n",
+    "        diff = round(draft_player.player_points.total - top_player.player_points.total, 1)\n",
+    "        diffs.append((diff, draft_player))\n",
+    "biggest_diffs = sorted(diffs, reverse=True, key=lambda x: x[0])\n",
+    "smallest_diffs = sorted(diffs, key=lambda x: x[0])\n",
+    "print(\"Biggest draft steals\")\n",
+    "for diff, player in biggest_diffs[:5]:\n",
+    "    print(f\"{player.name.first} {player.name.last} - {diff}\")\n",
+    "print(\"Biggest draft busts\")\n",
+    "for diff, player in smallest_diffs[:5]:\n",
+    "    print(f\"{player.name.first} {player.name.last} - {diff}\")"
    ]
   },
   {
