--- a/ken.ipynb
+++ b/ken.ipynb
@@ -2,19 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from yfpy.query import YahooFantasySportsQuery\n",
+    "from yfpy.models import YahooFantasyObject\n",
     "from datetime import datetime, timedelta\n",
     "from dotenv import load_dotenv\n",
-    "import os"
+    "import os\n",
+    "from nhlpy import NHLClient\n",
+    "from yfpy.utils import reformat_json_list, unpack_data, prettify_data, jsonify_data\n",
+    "import requests\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nhl_client = NHLClient()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,39 +58,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "league_info = query.get_league_info()\n",
-    "start_week = league_info.start_week\n",
-    "end_week = league_info.end_week"
+    "league_start_week = league_info.start_week\n",
+    "league_end_week = league_info.end_week\n",
+    "league_start_date_str = league_info.start_date\n",
+    "league_end_date_str = league_info.end_date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_team_stats_by_date(team_id, date):\n",
-    "    team_key = f\"{league_info.league_key}.t.{team_id}\"\n",
-    "    return query.query(\n",
-    "        f\"https://fantasysports.yahooapis.com/fantasy/v2/team/{team_key}/stats;type=date;date={date}\", \n",
-    "        [\"team\", [\"team_points\", \"team_projected_points\"]]\n",
-    "    )"
+    "def get_league_game_weeks():\n",
+    "    game_weeks = query.query(\n",
+    "        f\"https://fantasysports.yahooapis.com/fantasy/v2/game/{game_id}/game_weeks\", \n",
+    "        [\"game\", \"game_weeks\"]\n",
+    "    )\n",
+    "    game_weeks_league = game_weeks\n",
+    "    game_weeks_league[league_start_week-1].start = league_start_date_str\n",
+    "    game_weeks_league[league_end_week-1].end = league_end_date_str\n",
+    "    return game_weeks_league"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "league_game_weeks = get_league_game_weeks()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_dates_by_week(week):\n",
+    "    start_date_str = league_game_weeks[week-1].start\n",
+    "    end_date_str = league_game_weeks[week-1].end\n",
+    "    start_date = datetime.strptime(start_date_str, \"%Y-%m-%d\")\n",
+    "    end_date = datetime.strptime(end_date_str, \"%Y-%m-%d\")\n",
+    "    return [(start_date + timedelta(days=i)).strftime(\"%Y-%m-%d\") for i in range((end_date - start_date).days + 1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_players(player_keys):\n",
     "    return [\n",
     "        player \n",
-    "        for i in range(round(len(player_keys) / 25) + 1)\n",
+    "        for i in range(int(len(player_keys) / 25) + 1)\n",
     "        for player in query.query(\n",
     "            f\"https://fantasysports.yahooapis.com/fantasy/v2/league/{league_info.league_key}/players;player_keys={','.join(player_keys[i*25:min((i+1)*25, len(player_keys))])};start={i*25}/stats\",\n",
     "            [\"league\", \"players\"]\n",
@@ -93,7 +135,7 @@
     "def get_top_n_players_by_position(n, position):\n",
     "    if position == \"F\":\n",
     "        position = \"C,LW,RW\"\n",
-    "    return [playere for i in range(round(n/25)+1) for player in query.query(\n",
+    "    return [playere for i in range(int(n/25)+1) for player in query.query(\n",
     "        f\"https://fantasysports.yahooapis.com/fantasy/v2/league/{league_info.league_key}/players;sort=PTS;sort_type=season;position={position};count={n};start={i*25}/stats\",\n",
     "        [\"league\", \"players\"]\n",
     "    )]"
@@ -101,28 +143,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Get's daily scores for each matchup of the week.\n",
+    "'''\n",
+    "def get_matchups_by_week(week):\n",
+    "    dates = get_dates_by_week(week)\n",
+    "    resp = query.get_response(\n",
+    "        f\"https://fantasysports.yahooapis.com/fantasy/v2/league/{league_info.league_key}/scoreboard;week={week}/matchups/teams/stats_collection;types=date;date={','.join(dates)}\", \n",
+    "    )\n",
+    "    teams_dict = resp.json().get('fantasy_content', {}).get('league', [{}])[1].get('scoreboard', {}).get(\"0\").get(\"matchups\", {})\n",
+    "    teams_dict = unpack_data(teams_dict, YahooFantasyObject)\n",
+    "    teams_dict = [el[\"matchup\"] for el in teams_dict] # Convert object to list\n",
+    "    return teams_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Biggest draft busts\n",
-      "J.T. Miller - 97.6\n",
-      "Evan Bouchard - 76.6\n",
-      "Nathan MacKinnon - 76.3\n",
-      "Noah Dobson - 73.2\n",
-      "Thatcher Demko - 62.0\n",
-      "Biggest draft steals\n",
-      "Dougie Hamilton - -293.2\n",
-      "Tyson Barrie - -225.8\n",
-      "Mikhail Sergachev - -213.2\n",
-      "Jack Hughes - -146.6\n",
-      "Devon Levi - -144.0\n"
+      "Biggest comebacks\n",
+      "8 b'Eric\\xe2\\x80\\x99s a Bitch Team' b\"Theodore's Poo Poo Hospital\" - 58.3\n",
+      "1 b'Miami Steamrollers' b\"eric's Awe-Inspiring Team\" - 36.7\n",
+      "7 b'Miami Steamrollers' b\"Cyrus's Cursed Team\" - 35.2\n",
+      "8 b\"Tim's Terrific Team\" b\"Cyrus's Cursed Team\" - 31.5\n",
+      "11 b\"Theodore's Poo Poo Hospital\" b\"Kevin's Incredible Team\" - 23.6\n"
      ]
     }
    ],
+   "source": [
+    "'''\n",
+    "Biggest comeback\n",
+    "52.8s\n",
+    "'''\n",
+    "deficits = []\n",
+    "for week in range(league_start_week, league_end_week + 1):\n",
+    "    matchups = get_matchups_by_week(week)\n",
+    "    for matchup in matchups:\n",
+    "        # Comeback win can't happen without a winner\n",
+    "        if matchup.is_tied:\n",
+    "            continue\n",
+    "        winner_id = int(matchup.winner_team_key.split(\".\")[-1])\n",
+    "        team_ids = [matchup.teams[0].team_id, matchup.teams[1].team_id]\n",
+    "        team_w_idx, team_l_idx = (0, 1) if winner_id == team_ids[0] else (1, 0)\n",
+    "        deficit = 0\n",
+    "        start_date = datetime.strptime(matchup.week_start, \"%Y-%m-%d\")\n",
+    "        end_date = datetime.strptime(matchup.week_end, \"%Y-%m-%d\")\n",
+    "        # Don't include the last day since the matchup is over\n",
+    "        for i in range((end_date - start_date).days):\n",
+    "            current_date_str = (start_date + timedelta(days=i)).strftime(\"%Y-%m-%d\")\n",
+    "            team_w_points = matchup.teams[team_w_idx].team_stats_collection[i][\"team_points\"].total\n",
+    "            team_l_points = matchup.teams[team_l_idx].team_stats_collection[i][\"team_points\"].total\n",
+    "            deficit = round(deficit + team_l_points - team_w_points, 1)\n",
+    "            if deficit > 0:\n",
+    "                deficits.append((deficit, matchup))\n",
+    "biggest_deficits = sorted(deficits, key=lambda x: x[0])\n",
+    "biggest_deficits = list({f\"{matchup.week}.{matchup.winner_team_key}\": (deficit, matchup) for (deficit, matchup) in biggest_deficits}.values())\n",
+    "biggest_deficits = sorted(biggest_deficits, reverse=True, key=lambda x: x[0])\n",
+    "print(\"Biggest comebacks\")\n",
+    "for diff, matchup in biggest_deficits[:5]:\n",
+    "    print(f\"{matchup.week} {matchup.teams[0].name} {matchup.teams[1].name} - {diff}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_next_game():\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Most/least average points after drop (team)\n",
+    "- Get all transactions\n",
+    "- Filter by drop\n",
+    "- Get NHL schedule\n",
+    "'''\n",
+    "transactions = query.get_league_transactions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactions_drop = [{\"player_dropped\": player, \"timestamp\": transaction.timestamp} for transaction in transactions for player in transaction.players if player.transaction_data.type == \"drop\"] # if player.transaction_data.type\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactions_drop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nhl_client.schedule.get_season_schedule(team_abbr=\"BUF\", season=\"20232024\")[\"games\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[draft_result.player_key for draft_result in draft_results]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "'''\n",
     "Biggest draft busts/steals\n",
@@ -130,6 +295,7 @@
     "# Get draft results\n",
     "draft_results = query.get_league_draft_results()\n",
     "draft_players = get_players([draft_result.player_key for draft_result in draft_results])\n",
+    "draft_players\n",
     "draft_players_by_pos = {\"F\": [], \"D\": [], \"G\": []}\n",
     "positions_map = {\"C\": \"F\", \"LW\": \"F\", \"RW\": \"F\", \"D\": \"D\", \"G\": \"G\"}\n",
     "for draft_player in draft_players:\n",
@@ -154,121 +320,6 @@
     "print(\"Biggest draft busts\")\n",
     "for diff, player in smallest_diffs[:5]:\n",
     "    print(f\"{player.name.first} {player.name.last} - {diff}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "Biggest comeback\n",
-    "Time: 5m 49.7s\n",
-    "Requests: 1176\n",
-    "'''\n",
-    "req_count = 0\n",
-    "max_deficit = 0\n",
-    "max_deficit_matchup = None\n",
-    "for week_num in range(start_week, end_week + 1):\n",
-    "    matchups = query.get_league_matchups_by_week(week_num)\n",
-    "    req_count += 1\n",
-    "    for matchup in matchups:\n",
-    "        # Comeback win can't happen without a winner\n",
-    "        if matchiup.is_tied:\n",
-    "            continue\n",
-    "        winner_id = int(matchup.winner_team_key.split(\".\")[-1])\n",
-    "        team_ids = [matchup.teams[0].team_id, matchup.teams[1].team_id]\n",
-    "        team_w_id, team_l_id = (team_ids[0], team_ids[1]) if winner_id == team_ids[0] else (team_ids[1], team_ids[0])\n",
-    "        deficit = 0\n",
-    "        start_date = datetime.strptime(matchup.week_start, \"%Y-%m-%d\")\n",
-    "        end_date = datetime.strptime(matchup.week_end, \"%Y-%m-%d\")\n",
-    "        # Don't include the last day since the matchup is over\n",
-    "        for i in range((end_date - start_date).days):\n",
-    "            current_date_str = (start_date + timedelta(days=i)).strftime(\"%Y-%m-%d\")\n",
-    "            team_w_points = get_team_stats_by_date(team_w_id, current_date_str).team_points.total\n",
-    "            team_l_points = get_team_stats_by_date(team_l_id, current_date_str).team_points.total\n",
-    "            req_count += 2\n",
-    "            deficit = round(deficit + team_l_points - team_w_points, 1)\n",
-    "            if deficit > max_deficit:\n",
-    "                max_deficit = deficit\n",
-    "                max_deficit_matchup = matchup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(max_deficit, max_deficit_matchup)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "req_count\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Unsused Code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_league_matchups_by_date(date):\n",
-    "    return query.query(f\"https://fantasysports.yahooapis.com/fantasy/v2/league/{league_info.league_key}/scoreboard;date={date}\", [\"league\", \"scoreboard\", \"0\", \"matchups\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "Biggest comeback, doesn't work\n",
-    "'''\n",
-    "# TODO: Consider edge case where tied\n",
-    "# Convert strings to datetime objects\n",
-    "start_date = datetime.strptime(start_date_str, \"%Y-%m-%d\")\n",
-    "end_date = datetime.strptime(end_date_str, \"%Y-%m-%d\")\n",
-    "\n",
-    "# TODO: Don't include the last day since the matchup is over\n",
-    "req_count = 1\n",
-    "max_deficit = 0\n",
-    "max_deficit_matchup = None\n",
-    "deficits = [0] * 4 # TODO: Dynamically calculate num_matchups\n",
-    "for i in range((end_date - start_date).days):\n",
-    "    current_date_str = (start_date + timedelta(days=i)).strftime(\"%Y-%m-%d\")\n",
-    "    matchups = get_league_matchups_by_date(current_date_str) # This endpoint doesn't work\n",
-    "    req_count += 1\n",
-    "    for j, matchup in enumerate(matchups):\n",
-    "        print(current_date_str, matchup.week_end, current_date_str == matchup.week_end)\n",
-    "        if current_date_str == matchup.week_end:\n",
-    "            deficits = [0] * 4\n",
-    "            continue\n",
-    "        winner_id = int(matchup.winner_team_key.split(\".\")[-1])\n",
-    "        team_ids = [matchup.teams[0].team_id, matchup.teams[1].team_id]\n",
-    "        team_w_id, team_l_id = (team_ids[0], team_ids[1]) if winner_id == team_ids[0] else (team_ids[1], team_ids[0])\n",
-    "        team_l_points = matchup.teams[0].team_points.total if winner_id == matchup.teams[0] else matchup.teams[1].team_points.total\n",
-    "        team_w_points = matchup.teams[1].team_points.total if winner_id == matchup.teams[1] else matchup.teams[0].team_points.total\n",
-    "        deficits[j] = round(deficits[j] + team_l_points - team_w_points, 1)\n",
-    "    if max(deficits) > max_deficit:\n",
-    "        max_deficit = max(deficits)\n",
-    "        max_meficit_matchup_index = deficits.index(max_deficit)\n",
-    "        max_deficit_matchup = matchups[max_meficit_matchup_index]"
    ]
   }
  ],
