--- a/ken.ipynb
+++ b/ken.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
     "from yfpy.query import YahooFantasySportsQuery\n",
     "from yfpy.models import YahooFantasyObject\n",
-    "from datetime import datetime, timedelta\n",
+    "from datetime import datetime, timedelta, timezone\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
     "from nhlpy import NHLClient\n",
     "from yfpy.utils import reformat_json_list, unpack_data, prettify_data, jsonify_data\n",
     "import requests\n",
-    "import json"
+    "import json\n",
+    "from zoneinfo import ZoneInfo\n",
+    "from collections import defaultdict"
    ]
   },
   {
@@ -39,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,22 +165,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 181,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Biggest comebacks\n",
-      "8 b'Eric\\xe2\\x80\\x99s a Bitch Team' b\"Theodore's Poo Poo Hospital\" - 58.3\n",
-      "1 b'Miami Steamrollers' b\"eric's Awe-Inspiring Team\" - 36.7\n",
-      "7 b'Miami Steamrollers' b\"Cyrus's Cursed Team\" - 35.2\n",
-      "8 b\"Tim's Terrific Team\" b\"Cyrus's Cursed Team\" - 31.5\n",
-      "11 b\"Theodore's Poo Poo Hospital\" b\"Kevin's Incredible Team\" - 23.6\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def get_player_game_log_nhl(player_id):\n",
+    "    season = f\"{league_info.season}{league_info.season+1}\"\n",
+    "    return requests.get(f\"https://api-web.nhle.com/v1/player/{player_id}/game-log/{season}/2\").json()[\"gameLog\"] # 2 inndicates regular season games"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_game_info_nhl(game_id):\n",
+    "    return requests.get(f\"https://api-web.nhle.com/v1/gamecenter/{game_id}/landing\").json()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Most/least points after dropping a player on average\n",
+    "'''\n",
+    "transactions = query.get_league_transactions()\n",
+    "transactions_drop = [{\"player\": player, \"timestamp\": transaction.timestamp} for transaction in transactions for player in transaction.players if player.transaction_data.type == \"drop\"]\n",
+    "team_name = {}\n",
+    "points_by_team = defaultdict(list)\n",
+    "for transaction in transactions_drop:\n",
+    "    print(transaction)\n",
+    "    transaction_date = datetime.fromtimestamp(transaction[\"timestamp\"], tz=ZoneInfo(\"America/New_York\"))\n",
+    "    transaction_player = transaction[\"player\"]\n",
+    "    team_key = transaction_player.transaction_data.source_team_key\n",
+    "    player_name = transaction_player.name.full\n",
+    "    player_name_url = player_name.replace(\" \", \"%20\")\n",
+    "    players = requests.get(f\"https://search.d3.nhle.com/api/v1/search/player?culture=en-us&limit=20&q={player_name_url}%2A\").json()\n",
+    "    players = [player for player in players if player[\"name\"] == player_name] # Matching names\n",
+    "    # If there are multiple players matching name, filter by other attributes\n",
+    "    if len(players) > 1:\n",
+    "        players = [player for player in players if player[\"lastSeasonId\"] and int(player[\"lastSeasonId\"][:4]) >= league_info.season]\n",
+    "        if len(players) > 1:\n",
+    "            players = [player for player in players if player[\"positionCode\"] in transaction_player.display_position.split(\",\")]\n",
+    "    if len(players) != 1:\n",
+    "        print(len(players), player_name, players)\n",
+    "    player = players[0]\n",
+    "    player_game_log = get_player_game_log_nhl(player[\"playerId\"])\n",
+    "    if len(player_game_log) == 0:\n",
+    "        print(f\"{player_name} didn't play any games this season\")\n",
+    "        continue\n",
+    "    # TODO: Consider case when someone is dropped due to injury\n",
+    "    # last_game = [game_log for game_log in player_game_log if datetime.strptime(game_log[\"gameDate\"], \"%Y-%m-%d\").replace(tzinfo=timezone(timedelta(hours=-4))).date() <= transaction_date.date()]\n",
+    "    # if len(last_game) == 0: # No games played before drop\n",
+    "    #     first_game = player_game_log[-1]\n",
+    "    #     print(f\"{player_name} didn't play any games yet\")\n",
+    "    #     continue\n",
+    "    # Next game could either be the same day as pickup or game after pickup\n",
+    "    next_game = [game_log for game_log in player_game_log if datetime.strptime(game_log[\"gameDate\"], \"%Y-%m-%d\").replace(tzinfo=timezone(timedelta(hours=-4))).date() >= transaction_date.date()]\n",
+    "    if len(next_game) == 0: # Didn't play the rest of the season\n",
+    "        print(f\"{player_name} didn't play any more games\")\n",
+    "        continue\n",
+    "    next_game_date = next_game[-1][\"gameDate\"]\n",
+    "    player_stats = query.get_player_stats_by_date(transaction_player.player_key, next_game_date)\n",
+    "    points_by_team[team_key].append(player_stats.player_points.total)\n",
+    "    team_name[team_key] = transaction_player.transaction_data.source_team_name\n",
+    "team_average = []\n",
+    "for team_key, team_points in points_by_team.items():\n",
+    "    team_average.append((team_name[team_key], round(sum(team_points)/len(team_points), 1)))\n",
+    "team_average = sorted(team_average, key=lambda x: x[1])\n",
+    "print(team_average)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "'''\n",
     "Biggest comeback\n",
@@ -211,76 +277,6 @@
     "print(\"Biggest comebacks\")\n",
     "for diff, matchup in biggest_deficits[:5]:\n",
     "    print(f\"{matchup.week} {matchup.teams[0].name} {matchup.teams[1].name} - {diff}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_next_game():\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "Most/least average points after drop (team)\n",
-    "- Get all transactions\n",
-    "- Filter by drop\n",
-    "- Get NHL schedule\n",
-    "'''\n",
-    "transactions = query.get_league_transactions()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transactions_drop = [{\"player_dropped\": player, \"timestamp\": transaction.timestamp} for transaction in transactions for player in transaction.players if player.transaction_data.type == \"drop\"] # if player.transaction_data.type\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transactions_drop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nhl_client.schedule.get_season_schedule(team_abbr=\"BUF\", season=\"20232024\")[\"games\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transactions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[draft_result.player_key for draft_result in draft_results]"
    ]
   },
   {
