--- a/adam.ipynb
+++ b/adam.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,24 +153,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "load_dotenv()\n",
+    "CLIENT_ID = os.getenv(\"CLIENT_ID\")\n",
+    "CLIENT_SECRET = os.getenv(\"CLIENT_SECRET\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "from yfpy.query import YahooFantasySportsQuery\n",
     "\n",
     "query = YahooFantasySportsQuery(\n",
-    "    league_id=\"67269\",\n",
+    "    league_id=\"97108\",\n",
     "    game_code=\"nhl\",\n",
-    "    game_id=453,\n",
-    "    yahoo_consumer_key=\"\",\n",
-    "    yahoo_consumer_secret=\"\"\n",
+    "    game_id=427,\n",
+    "    yahoo_consumer_key=CLIENT_ID,\n",
+    "    yahoo_consumer_secret=CLIENT_SECRET\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +193,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "league_info = query.get_league_info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_players(player_keys):\n",
+    "    return [\n",
+    "        player \n",
+    "        for i in range(int(len(player_keys) / 25) + 1)\n",
+    "        for player in query.query(\n",
+    "            f\"https://fantasysports.yahooapis.com/fantasy/v2/league/{league_info.league_key}/players;player_keys={','.join(player_keys[i*25:min((i+1)*25, len(player_keys))])};start={i*25}/stats\",\n",
+    "            [\"league\", \"players\"]\n",
+    "        )\n",
+    "    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,74 +302,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PlayerStats({\n",
-      "  \"coverage_type\": \"season\",\n",
-      "  \"season\": 2024,\n",
-      "  \"stats\": [\n",
-      "    {\n",
-      "      \"stat\": {\n",
-      "        \"stat_id\": 1,\n",
-      "        \"value\": 22.0\n",
-      "      }\n",
-      "    },\n",
-      "    {\n",
-      "      \"stat\": {\n",
-      "        \"stat_id\": 2,\n",
-      "        \"value\": 49.0\n",
-      "      }\n",
-      "    },\n",
-      "    {\n",
-      "      \"stat\": {\n",
-      "        \"stat_id\": 4,\n",
-      "        \"value\": 10.0\n",
-      "      }\n",
-      "    },\n",
-      "    {\n",
-      "      \"stat\": {\n",
-      "        \"stat_id\": 8,\n",
-      "        \"value\": 23.0\n",
-      "      }\n",
-      "    },\n",
-      "    {\n",
-      "      \"stat\": {\n",
-      "        \"stat_id\": 11,\n",
-      "        \"value\": 0.0\n",
-      "      }\n",
-      "    },\n",
-      "    {\n",
-      "      \"stat\": {\n",
-      "        \"stat_id\": 14,\n",
-      "        \"value\": 155.0\n",
-      "      }\n",
-      "    },\n",
-      "    {\n",
-      "      \"stat\": {\n",
-      "        \"stat_id\": 31,\n",
-      "        \"value\": 29.0\n",
-      "      }\n",
-      "    },\n",
-      "    {\n",
-      "      \"stat\": {\n",
-      "        \"stat_id\": 32,\n",
-      "        \"value\": 9.0\n",
-      "      }\n",
-      "    }\n",
-      "  ]\n",
-      "})\n"
+     "ename": "AttributeError",
+     "evalue": "'Player' object has no attribute 'players_stats'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[110], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m drafted_players \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(team_drafts[team_keys[\u001b[38;5;241m0\u001b[39m]][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPlayer ID\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m      3\u001b[0m stats \u001b[38;5;241m=\u001b[39m get_players(player_keys\u001b[38;5;241m=\u001b[39mdrafted_players)\n\u001b[1;32m----> 4\u001b[0m \u001b[43mstats\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplayers_stats\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# pull each team draft \u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# pull each player from the draft\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# pull each player's stats\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     18\u001b[0m \n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# total_draft_points = {}\u001b[39;00m\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\yfpy\\models.py:62\u001b[0m, in \u001b[0;36mYahooFantasyObject.__getattribute__\u001b[1;34m(self, attribute_name)\u001b[0m\n\u001b[0;32m     58\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m__getattribute__\u001b[39m(\u001b[38;5;28mself\u001b[39m, attribute_name: \u001b[38;5;28mstr\u001b[39m):\n\u001b[0;32m     59\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Override __getattribute__ to flatten lists of single-key dictionaries with objects as values to lists of\u001b[39;00m\n\u001b[0;32m     60\u001b[0m \u001b[38;5;124;03m    objects.\u001b[39;00m\n\u001b[0;32m     61\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 62\u001b[0m     attribute \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mobject\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__getattribute__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mattribute_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     64\u001b[0m     \u001b[38;5;66;03m# skip builtin attributes that start with underscores and check if attribute is a list or dict\u001b[39;00m\n\u001b[0;32m     65\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m attribute_name\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(attribute, (\u001b[38;5;28mlist\u001b[39m, \u001b[38;5;28mdict\u001b[39m)):\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Player' object has no attribute 'players_stats'"
      ]
     }
    ],
    "source": [
-    "mcdavid_stats = query.get_player_stats_for_season(player_key=\"453.p.6743\").player_stats\n",
-    "print(mcdavid_stats)\n",
-    "total_draft_points = {}"
+    "drafted_players = list(team_drafts[team_keys[0]]['Player ID'])\n",
+    "\n",
+    "stats = get_players(player_keys=drafted_players)\n",
+    "stats[0].players_stats\n",
+    "# pull each team draft \n",
+    "# pull each player from the draft\n",
+    "# pull each player's stats\n",
+    "# pull league scoring settings\n",
+    "# multiply league settings by player's stats\n",
+    "# for draft in team_drafts:\n",
+    "\n",
+    "    \n",
+    "\n",
+    "# mcdavid_stats = query.get_player_stats_for_season(player_key=\"427.p.6743\") #.player_stats.clean_data_dict()['stats']\n",
+    "# mcdavid_stats[0]['stat'].value\n",
+    "# print(mcdavid_stats)\n",
+    "# print(mcdavid_stats.clean_data_dict())\n",
+    "\n",
+    "# total_draft_points = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['427.p.5425',\n",
+       " '427.p.7519',\n",
+       " '427.p.3637',\n",
+       " '427.p.7736',\n",
+       " '427.p.5367',\n",
+       " '427.p.6448',\n",
+       " '427.p.4682',\n",
+       " '427.p.7267',\n",
+       " '427.p.7636',\n",
+       " '427.p.5470',\n",
+       " '427.p.7910',\n",
+       " '427.p.6367',\n",
+       " '427.p.30111',\n",
+       " '427.p.8285',\n",
+       " '427.p.6760',\n",
+       " '427.p.5364']"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(team_drafts[team_keys[0]]['Player ID'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['player']"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats"
    ]
   },
   {
@@ -355,16 +418,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Mcdavid = query.get_player_stats_for_season(\"453.p.6743\")"
+    "# Mcdavid = query.get_player_stats_for_season(\"453.p.6743\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2532,7 +2595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
