biggest blowouts done

--- a/adam.ipynb
+++ b/adam.ipynb
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1105,6 @@
     "'''\n",
     "Closest Matchups\n",
     "'''\n",
-    "\n",
     "top_x = 10\n",
     "print('The closest matchups were...')\n",
     "narrow_wins = {team_key : 0 for team_key in team_keys}\n",
@@ -1139,6 +1138,7 @@
     "# But this can be turned into who has the best record in matchups decided by less then x (5-10 probably) points\n",
     "# Can also see who has the most matchups decided by less then x points\n",
     "# i.e. a different award (Best/Worst Close Matchup Record)\n",
+    "# Award for loser of most blowouts too (50+ pts)? - Might not be that interesting will likely just be people near the bottom of the table\n",
     "narrow_wins = sorted(narrow_wins.items(), key=lambda item: item[1], reverse=True)\n",
     "narrow_losses = sorted(narrow_losses.items(), key=lambda item: item[1], reverse=True)\n",
     "narrow_matchups = sorted(narrow_matchups.items(), key=lambda item: item[1], reverse=True)\n",
@@ -1149,35 +1149,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 382,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The biggest blowout matchups were...\n",
+      "1. Theodore's Poo Poo Hospital def. Kevin's Incredible Team\n",
+      "Score: 262.8-124.3\n",
+      "Point Differential: 138.5\n",
+      "Week: 18\n",
+      "\n",
+      "2. Eric’s a Bitch Team def. Miami Steamrollers\n",
+      "Score: 243.5-123.4\n",
+      "Point Differential: 120.1\n",
+      "Week: 11\n",
+      "\n",
+      "3. Cyrus's Cursed Team def. Miami Steamrollers\n",
+      "Score: 200.0-108.4\n",
+      "Point Differential: 91.6\n",
+      "Week: 14\n",
+      "\n",
+      "4. eric's Awe-Inspiring Team def. adam2\n",
+      "Score: 209.6-118.0\n",
+      "Point Differential: 91.6\n",
+      "Week: 14\n",
+      "\n",
+      "5. Tim's Terrific Team def. Miami Steamrollers\n",
+      "Score: 198.0-106.6\n",
+      "Point Differential: 91.4\n",
+      "Week: 5\n",
+      "\n",
+      "6. Theodore's Poo Poo Hospital def. Miami Steamrollers\n",
+      "Score: 199.0-108.0\n",
+      "Point Differential: 91.0\n",
+      "Week: 13\n",
+      "\n",
+      "7. Cyrus's Cursed Team def. Miami Steamrollers\n",
+      "Score: 192.6-106.8\n",
+      "Point Differential: 85.8\n",
+      "Week: 21\n",
+      "\n",
+      "8. Cyrus's Cursed Team def. Kevin's Incredible Team\n",
+      "Score: 250.3-165.1\n",
+      "Point Differential: 85.2\n",
+      "Week: 5\n",
+      "\n",
+      "9. Theodore's Poo Poo Hospital def. adam2\n",
+      "Score: 276.7-192.5\n",
+      "Point Differential: 84.2\n",
+      "Week: 19\n",
+      "\n",
+      "10. Tim's Terrific Team def. Kevin's Incredible Team\n",
+      "Score: 217.2-133.4\n",
+      "Point Differential: 83.8\n",
+      "Week: 17\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Biggest Blowouts\n",
     "'''\n",
     "top_x = 10\n",
+    "num = 1\n",
     "print('The biggest blowout matchups were...')\n",
-    "for i in range(len(completed_matchups_data)):\n",
+    "for i in range(len(completed_matchups_data)-1, len(completed_matchups_data)-top_x-1, -1):\n",
     "    if completed_matchups_data[i]['point_diff'] > 0:\n",
-    "        print(f\"{i+1}. {completed_matchups_data[i]['team1_name']} def. {completed_matchups_data[i]['team2_name']}\")\n",
+    "        print(f\"{num}. {completed_matchups_data[i]['team1_name']} def. {completed_matchups_data[i]['team2_name']}\")\n",
     "        print(f\"Score: {completed_matchups_data[i]['team1_points']}-{completed_matchups_data[i]['team2_points']}\") \n",
     "        print(f\"Point Differential: {abs(completed_matchups_data[i]['point_diff'])}\")\n",
     "        print(f\"Week: {completed_matchups_data[i]['week']}\")\n",
-    "        narrow_wins[completed_matchups_data[i]['team1_key']] += 1\n",
-    "        narrow_losses[completed_matchups_data[i]['team2_key']] += 1\n",
-    "        narrow_matchups[completed_matchups_data[i]['team1_key']] += 1\n",
-    "        narrow_matchups[completed_matchups_data[i]['team2_key']] += 1\n",
     "    elif completed_matchups_data[i]['point_diff'] < 0:\n",
-    "        print(f\"{i+1}. {completed_matchups_data[i]['team2_name']} def. {completed_matchups_data[i]['team1_name']}\")\n",
+    "        print(f\"{num}. {completed_matchups_data[i]['team2_name']} def. {completed_matchups_data[i]['team1_name']}\")\n",
     "        print(f\"Score: {completed_matchups_data[i]['team2_points']}-{completed_matchups_data[i]['team1_points']}\") \n",
     "        print(f\"Point Differential: {abs(completed_matchups_data[i]['point_diff'])}\")\n",
     "        print(f\"Week: {completed_matchups_data[i]['week']}\")\n",
-    "        narrow_wins[completed_matchups_data[i]['team2_key']] += 1\n",
-    "        narrow_losses[completed_matchups_data[i]['team1_key']] += 1\n",
-    "        narrow_matchups[completed_matchups_data[i]['team1_key']] += 1\n",
-    "        narrow_matchups[completed_matchups_data[i]['team2_key']] += 1\n",
-    "    print('')"
+    "    print('')\n",
+    "    num += 1"
    ]
   },
   {
