--- a/ken.ipynb
+++ b/ken.ipynb
@@ -2,35 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from yfpy.query import YahooFantasySportsQuery\n",
-    "from yfpy.models import YahooFantasyObject, Player, StatCategories\n",
     "from datetime import datetime, timedelta, timezone\n",
-    "from dotenv import load_dotenv\n",
-    "import os\n",
-    "from nhlpy import NHLClient\n",
-    "from yfpy.utils import reformat_json_list, unpack_data, prettify_data, jsonify_data\n",
     "import requests\n",
     "import json\n",
     "from zoneinfo import ZoneInfo\n",
     "from collections import defaultdict\n",
-    "import unicodedata\n",
-    "from pathlib import Path\n",
-    "import xml.etree.ElementTree as ET\n",
     "import math\n",
-    "from yahoo_oauth import OAuth2\n",
-    "from requests.adapters import HTTPAdapter, Retry\n",
-    "from query import Query"
+    "from query import Query\n",
+    "from pprint import pprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2025-03-07 10:28:24,407 DEBUG] [yahoo_oauth.oauth.handler] AUTHORIZATION URL : https://api.login.yahoo.com/oauth2/request_auth?redirect_uri=oob&response_type=code&client_id=dj0yJmk9bU10Q0gxVE12TzdDJmQ9WVdrOVdIQTJWRGRDYURFbWNHbzlNQT09JnM9Y29uc3VtZXJzZWNyZXQmc3Y9MCZ4PWU1\n",
+      "[2025-03-07 10:28:31,199 DEBUG] [yahoo_oauth.oauth.refresh_access_token] REFRESHING TOKEN\n",
+      "[2025-03-07 10:28:31,308 DEBUG] [yahoo_oauth.oauth.token_is_valid] ELAPSED TIME : 0.10810995101928711\n",
+      "[2025-03-07 10:28:31,309 DEBUG] [yahoo_oauth.oauth.token_is_valid] TOKEN IS STILL VALID\n",
+      "[2025-03-07 10:28:31,693 DEBUG] [yahoo_oauth.oauth.token_is_valid] ELAPSED TIME : 0.4929978847503662\n",
+      "[2025-03-07 10:28:31,698 DEBUG] [yahoo_oauth.oauth.token_is_valid] TOKEN IS STILL VALID\n"
+     ]
+    }
+   ],
    "source": [
     "# Use last season stats so there aren't any spoilers\n",
     "current = False\n",
@@ -38,6 +41,23 @@
     "game_id = 453 if current else 427\n",
     "league_key = f\"{game_id}.l.{league_id}\"\n",
     "query = Query(league_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Get's daily scores for each matchup of the week.\n",
+    "'''\n",
+    "def get_matchups_by_week(week):\n",
+    "    dates = get_dates_by_week(week)\n",
+    "    resp = query.get_response(\n",
+    "        f\"https://fantasysports.yahooapis.com/fantasy/v2/league/{league_info.league_key}/scoreboard;week={week}/matchups/teams/stats_collection;types=date;date={','.join(dates)}\", \n",
+    "    )\n",
+    "    return teams_dict"
    ]
   },
   {
@@ -11360,26 +11380,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "Get's daily scores for each matchup of the week.\n",
-    "'''\n",
-    "def get_matchups_by_week(week):\n",
-    "    dates = get_dates_by_week(week)\n",
-    "    resp = query.get_response(\n",
-    "        f\"https://fantasysports.yahooapis.com/fantasy/v2/league/{league_info.league_key}/scoreboard;week={week}/matchups/teams/stats_collection;types=date;date={','.join(dates)}\", \n",
-    "    )\n",
-    "    teams_dict = resp.json().get('fantasy_content', {}).get('league', [{}])[1].get('scoreboard', {}).get(\"0\").get(\"matchups\", {})\n",
-    "    teams_dict = unpack_data(teams_dict, YahooFantasyObject)\n",
-    "    teams_dict = [el[\"matchup\"] for el in teams_dict] # Convert object to list\n",
-    "    return teams_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 143,
    "metadata": {},
    "outputs": [],
@@ -11495,8 +11495,6 @@
    "source": [
     "'''\n",
     "Biggest comeback\n",
-    "TODO: Add the following line to bottom of Team class:\n",
-    "self.team_stats_collection: List[TeamPoints] = self._extracted_data.get(\"team_stats_collection\", []) # ADDED\n",
     "52.8s\n",
     "'''\n",
     "deficits = []\n",
