--- a/adam.ipynb
+++ b/adam.ipynb
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1327,9 +1327,14 @@
     "'''\n",
     "Team Dominance Over Another Team (Lopsided Rivalry, Pure Dominance)\n",
     "\n",
-    "Seems as if they team keys are always ordered the same with the smallest team ID first\n",
-    "But if this assumption is ever not correct it will completely mess up the stat\n",
-    "Could add error handling for this scenario but may not be necessary\n",
+    "- Seems as if the team keys are always ordered the same with the smallest team ID first\n",
+    "  But if this assumption is ever not correct it will completely mess up the stat\n",
+    "  Could add error handling for this scenario but may not be necessary\n",
+    "\n",
+    "- incl_playoffs and incl_consolation tags could make for some fun statements on the frontend \n",
+    "  but this does not handle if a team played in multiple playoff games with some being non-consolation and others being consolation\n",
+    "  (but I guess you would only play a team once in the playoffs so if they played playoffs and non-conslation it guarantees there was only 1 matchup and it was real playoffs) - I think this statement is TRUE\n",
+    "  (not sure if teams can play multiple times in consolation, sometimes consolation could be a ladder format where you can go up and down ex. ESPN fantasy)\n",
     "'''\n",
     "matchup_dict = defaultdict(list)\n",
     "for matchup in completed_matchups_data:\n",
