Most Drops award completed in Adam's Jupyter Notebook

--- a/adam.ipynb
+++ b/adam.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install yfpy"
+    "# !pip install aiohttp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,15 +35,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE_URL = \"https://fantasysports.yahooapis.com/fantasy/v2\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Use last season stats so there aren't any spoilers\n",
     "current = False\n",
     "league_id = \"67269\" if current else \"97108\"\n",
@@ -58,31 +49,63 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Most Picked-Up/Dropped Players are...\n",
-      "1. Matt Boldy (7)\n",
-      "2. Ukko-Pekka Luukkonen (6)\n",
-      "3. Darnell Nurse (5)\n",
-      "4. Jakob Chychrun (5)\n",
-      "5. Jacob Markstrom (5)\n",
-      "6. Brent Burns (5)\n",
-      "7. Claude Giroux (5)\n",
-      "8. Tyler Toffoli (4)\n",
-      "9. Ilya Samsonov (4)\n",
-      "10. Drake Batherson (4)\n",
-      "11. Josh Manson (4)\n",
-      "12. Connor Bedard (4)\n",
-      "13. Logan Thompson (4)\n",
-      "14. Jeff Skinner (4)\n",
-      "15. Tom Wilson (3)\n",
-      "16. Filip Gustavsson (3)\n",
-      "17. Joey Daccord (3)\n",
-      "18. Boone Jenner (3)\n",
-      "19. Alex Lyon (3)\n",
-      "20. Joseph Woll (3)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'rank': 1,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/jKwQ9jvG0kHwy.T4LpPgeg--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10162024/8290.png',\n",
+       "  'main_text': 7,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Matt Boldy'},\n",
+       " {'rank': 2,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/Lwy0Z2iRU0WNAGYUUE3AUw--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10022024/7569.png',\n",
+       "  'main_text': 6,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Ukko-Pekka Luukkonen'},\n",
+       " {'rank': 3,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/p4WEbLzDBns54AxK0Z1nwA--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10172024/5986.png',\n",
+       "  'main_text': 5,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Darnell Nurse'},\n",
+       " {'rank': 4,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/p0PpC1C4ztL_hr0ohNVgvQ--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10042024/7124.png',\n",
+       "  'main_text': 5,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Jakob Chychrun'},\n",
+       " {'rank': 5,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/5w7M9fUrSnNfs3iMh_3E4A--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10152024/4947.png',\n",
+       "  'main_text': 5,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Jacob Markstrom'},\n",
+       " {'rank': 6,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/Pz0STjc5z5Vdsn3OgkSVnw--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10112024/3358.png',\n",
+       "  'main_text': 5,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Brent Burns'},\n",
+       " {'rank': 7,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/RpZgznk1Tz7CXof.27hPGQ--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10162024/4002.png',\n",
+       "  'main_text': 5,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Claude Giroux'},\n",
+       " {'rank': 8,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/bWUhRD8Nd6G1.aBSVk548g--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10082024/5020.png',\n",
+       "  'main_text': 4,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Tyler Toffoli'},\n",
+       " {'rank': 9,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/X5JDoMuBl7KT5Lc1cFdj7Q--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10032024/6764.png',\n",
+       "  'main_text': 4,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Ilya Samsonov'},\n",
+       " {'rank': 10,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/3faJojNPyTC3LeXyuGNEjQ--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10162024/7636.png',\n",
+       "  'main_text': 4,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Drake Batherson'}]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -95,11 +118,10 @@
     "    url = f\"/league/{self.query.league_key}/transactions\"\n",
     "    response = await self.query.get_response(url)\n",
     "    transactions = response['league']['transactions']\n",
-    "    # pprint(transactions)\n",
     "    drops = {}\n",
     "    missed = 0\n",
     "    for transaction in transactions:\n",
-    "        if transaction['type'] == 'drop' and transaction['status'] == 'successful':\n",
+    "        if (transaction['type'] == 'drop') and transaction['status'] == 'successful':\n",
     "            try:\n",
     "                drops[transaction['players'][0]['player_key']][1] += 1\n",
     "            except:\n",
@@ -111,14 +133,19 @@
     "                drops[transaction['players'][1]['player_key']] = [transaction['players'][1]['name']['full'], 1]\n",
     "\n",
     "    drops = dict(sorted(drops.items(), key=lambda item: item[1][1], reverse=True))\n",
-    "\n",
-    "    top_x = 20\n",
-    "    print('The Most Picked-Up/Dropped Players are...')\n",
-    "    for i in range(top_x):\n",
-    "        print(f'{i+1}. {list(drops.values())[i][0]} ({str(list(drops.values())[i][1])})')\n",
-    "\n",
+    "    top_x = 10\n",
+    "    players = await query.get_players(list(drops.keys())[:top_x])   \n",
+    "    top_drops_list = [\n",
+    "        {\n",
+    "            \"rank\": i+1,\n",
+    "            \"image_url\": players[i]['image_url'],\n",
+    "            \"main_text\": list(drops.values())[i][1],\n",
+    "            \"sub_test\": \"\",\n",
+    "            \"stat\": list(drops.values())[i][0]\n",
+    "         } for i in range(top_x)\n",
+    "    ]\n",
     "    \n",
-    "    return \n",
+    "    return top_drops_list\n",
     "\n",
     "Metrics.get_most_dropped_players = get_most_dropped_players\n",
     "\n",
@@ -140,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
