Mike Sillenger (Most Dropped Player) metric complete

--- a/adam.ipynb
+++ b/adam.ipynb
@@ -45,6 +45,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'rank': 1,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/jKwQ9jvG0kHwy.T4LpPgeg--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10162024/8290.png',\n",
+       "  'main_text': 7,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Matt Boldy'},\n",
+       " {'rank': 2,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/Lwy0Z2iRU0WNAGYUUE3AUw--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10022024/7569.png',\n",
+       "  'main_text': 6,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Ukko-Pekka Luukkonen'},\n",
+       " {'rank': 3,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/p4WEbLzDBns54AxK0Z1nwA--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10172024/5986.png',\n",
+       "  'main_text': 5,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Darnell Nurse'},\n",
+       " {'rank': 4,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/p0PpC1C4ztL_hr0ohNVgvQ--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10042024/7124.png',\n",
+       "  'main_text': 5,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Jakob Chychrun'},\n",
+       " {'rank': 5,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/5w7M9fUrSnNfs3iMh_3E4A--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10152024/4947.png',\n",
+       "  'main_text': 5,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Jacob Markstrom'},\n",
+       " {'rank': 6,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/Pz0STjc5z5Vdsn3OgkSVnw--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10112024/3358.png',\n",
+       "  'main_text': 5,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Brent Burns'},\n",
+       " {'rank': 7,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/RpZgznk1Tz7CXof.27hPGQ--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10162024/4002.png',\n",
+       "  'main_text': 5,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Claude Giroux'},\n",
+       " {'rank': 8,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/bWUhRD8Nd6G1.aBSVk548g--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10082024/5020.png',\n",
+       "  'main_text': 4,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Tyler Toffoli'},\n",
+       " {'rank': 9,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/X5JDoMuBl7KT5Lc1cFdj7Q--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10032024/6764.png',\n",
+       "  'main_text': 4,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Ilya Samsonov'},\n",
+       " {'rank': 10,\n",
+       "  'image_url': 'https://s.yimg.com/iu/api/res/1.2/3faJojNPyTC3LeXyuGNEjQ--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10162024/7636.png',\n",
+       "  'main_text': 4,\n",
+       "  'sub_test': '',\n",
+       "  'stat': 'Drake Batherson'}]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics = Metrics(query)\n",
+    "\n",
+    "await metrics.get_most_dropped_players()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -147,11 +218,8 @@
     "    \n",
     "    return top_drops_list\n",
     "\n",
-    "Metrics.get_most_dropped_players = get_most_dropped_players\n",
-    "\n",
-    "metrics = Metrics(query)\n",
-    "\n",
-    "await metrics.get_most_dropped_players()"
+    "# Metrics.get_most_dropped_players = get_most_dropped_players\n",
+    "\n"
    ]
   },
   {
